Bug fixes + extras positioning
- Commented out psionic skills - they should probably go at the top of the psionics tab
- Fixed npc level reference with saves by adding a check to if the reference has defined the level accurately, which now deviates between pcs and npcs from recent updates
- Moved the extras list of changable features to be beneath the text areas to avoid a bug with unpressable buttons coming with the list growing too large

--- a/swnpretty.css
+++ b/swnpretty.css
@@ -871,6 +871,11 @@
   /*outline: 2px groove #eeede0;*/
   border: 1px solid #c9c7b8;
 }
+.swnpretty.sheet.actor .extras-list{
+  /*outline: 2px groove #eeede0;*/
+  margin-left: 4px;
+  margin-bottom: 5px;
+}
 .swnpretty.sheet.actor .tab textarea:focus{
   /*box-shadow:none;*/
   outline-color: rgba(39, 41, 132, 0.62);
